fixed text area row overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,14 @@
     padding: 0;
     margin: 0;
 }
+#textAreaSection {
+    padding: 10px;
+}
 .codeContainer textarea {
     width: 100%;
     padding: 0 10px;
-    margin: 10px 10px;
     white-space: pre;
     font-family: monospace;
+    height: 90vh;
+    resize: none;
 }
